package main

import (
	"log"
	"os"
	"os/signal"
	"syscall"
	"time"

	"voice-gateway/internal/bus"
	"voice-gateway/internal/config"
)

// TextMessage represents a text to synthesize
type TextMessage struct {
	SessionID string    `json:"session_id"`
	Text      string    `json:"text"`
	VoiceID   string    `json:"voice_id"`
	IsFinal   bool      `json:"is_final"`
	Timestamp time.Time `json:"timestamp"`
}

func main() {
	log.Println("Starting TTS Worker (stub implementation)...")

	cfg := config.Load()

	// Connect to NATS
	busClient, err := bus.NewClient(cfg.NATS.URL)
	if err != nil {
		log.Fatalf("Failed to connect to NATS: %v", err)
	}
	defer busClient.Close()

	log.Println("TTS Worker connected to NATS")
	log.Println("Note: This is a STUB implementation that simulates TTS")
	log.Println("Replace with real TTS service (ElevenLabs, Google TTS, etc.)")

	// In a real implementation, you would:
	// 1. Subscribe to text from NATS (voice.text.*)
	// 2. Send to TTS service for synthesis
	// 3. Publish audio chunks back to NATS (voice.tts.*)
	//
	// For streaming TTS:
	// - ElevenLabs streaming API (excellent quality, low latency)
	// - Google Cloud TTS with streaming
	// - Azure Speech Service
	// - Coqui TTS (self-hosted)

	log.Println("TTS Worker ready (stub mode)")
	log.Println("To implement real TTS:")
	log.Println("  1. Subscribe to voice.text.* subject")
	log.Println("  2. Send text to TTS service")
	log.Println("  3. Stream audio chunks back to voice.tts.* subject")
	log.Println("  4. Handle voice selection, speed, pitch controls")

	// Example subscription (commented out - implement when ready)
	// busClient.SubscribeText("*", func(msg *bus.Message) {
	//     var textMsg TextMessage
	//     json.Unmarshal(msg.Data, &textMsg)
	//     processText(textMsg, busClient)
	// })

	// Wait for interrupt
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
	<-sigChan

	log.Println("TTS Worker shutting down...")
}

// Example TTS integration function (to be implemented)
func processText(textMsg TextMessage, busClient *bus.Client) error {
	// TODO: Implement real TTS here
	// This is where you would:
	// 1. Send text to your TTS service
	// 2. Receive audio chunks (streaming)
	// 3. Publish each chunk to NATS

	log.Printf("Processing text: %s (session: %s)", textMsg.Text, textMsg.SessionID)

	// Stub: generate silence or beep
	// In reality, you'd get PCM/Opus audio from TTS service

	return nil
}

// Example real TTS integration patterns:
//
// 1. ElevenLabs Streaming:
//    - HTTP streaming endpoint
//    - Send text, receive audio chunks as they're generated
//    - Very low latency (< 300ms first byte)
//
// 2. Google Cloud TTS:
//    - gRPC streaming API
//    - Support for multiple voices, languages
//    - SSML for advanced control
//
// 3. Coqui TTS (self-hosted):
//    - HTTP API or gRPC
//    - VITS models for quality
//    - Full control over deployment
//
// Example structure:
//
// type TTSClient interface {
//     StreamSynthesize(ctx context.Context, text <-chan string) (<-chan AudioChunk, error)
// }
//
// type AudioChunk struct {
//     Data       []byte
//     SampleRate int
//     Format     string // "pcm", "opus"
//     IsFinal    bool
// }
//
// Implementation example with ElevenLabs:
//
// func synthesizeElevenLabs(text string) ([]byte, error) {
//     // Create streaming request
//     req := ElevenLabsStreamRequest{
//         Text:    text,
//         VoiceID: "21m00Tcm4TlvDq8ikWAM",
//         ModelID: "eleven_turbo_v2",
//     }
//
//     // Stream audio chunks
//     // Return Opus or PCM data
// }
